@@ -1,3 +1,9 @@
+2011-07-04  Thomas Schwinge  <thomas@schwinge.name>
+
+	* osabi.c (generic_elf_osabi_sniffer) <ELFOSABI_GNU>: Handle in the
+	same way as ELFOSABI_NONE.
+	<ELFOSABI_LINUX, ELFOSABI_HURD>: Remove cases.
+
 2011-07-04  Thiago Jung Bauermann  <bauerman@br.ibm.com>
 
 	* breakpoint.c: Fix typos in comments.
